# whu

./: .gitignore  .prettierrc.yaml  index.html  package.json  pnpm-lock.yaml  settings.html  tailwind.config.ts  tsconfig.json  vite.config.ts
scripts/: generate-icons.ts  generate-tray-icons.ts
src/: App.svelte  Break.svelte  Settings.svelte  backend.ts  i18n.ts  main-break.ts  main-settings.ts  main.ts  settings-store.ts  tailwind.css  timer.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/locales/: LICENSE  en.yaml  ru.yaml
src-tauri/src/: main.rs  plural_rules.rs  settings.rs  system_tray.rs
src/break/: Break.svelte  HintTypePicker.svelte  ProgressBar.svelte  main.ts  timer.ts
src/settings/: Button.svelte  Input.svelte  RadioGroup.svelte  Select.svelte  Settings.svelte  Slider.svelte  Switch.svelte  TabTrigger.svelte  ToggleGroup.svelte  main.ts
src/settings/colors/: Green.svelte
